# InterSPED

./: .dockerignore  .gitignore  .gitmodules  DEPLOY.md  HOW_TO_SPEAK_IN_REAL_LIFE.txt  INTERVIEWER_FIX_LOG.md  README.md  TODO.md  amplify.yml  app.yaml  index.html  main.py  pyproject.toml  start.sh  test_cerebras.py  test_sam_gw.py  typeshed.py
Backend/: .dockerignore  Dockerfile  pyproject.toml  run_all.py
Backend/.cache/: stats.json
Backend/.cache/scraping/: bad_company_company_info.json  bad_company_glassdoor_interviews.json  bad_company_leetcode_problems.json  bank_of_canada_company_info.json  bank_of_canada_glassdoor_interviews.json  bank_of_canada_leetcode_problems.json  de_la_salle_public_high_school_company_info.json  de_la_salle_public_high_school_glassdoor_interviews.json  leetcode_problem_details_0310126096598548.json  leetcode_problem_details_0ff205a2c9f907e2.json  leetcode_problem_details_1362bc7785fb5666.json  leetcode_problem_details_141f84b2d657ee84.json  leetcode_problem_details_1f2280887e346bad.json  leetcode_problem_details_1f31555125ababfc.json  leetcode_problem_details_326a12760ec14326.json  leetcode_problem_details_393faa2be7a2765a.json  leetcode_problem_details_43698e9f3b832d3f.json  leetcode_problem_details_4dac6ed243c2ea68.json  leetcode_problem_details_50f76edf8717ebab.json  leetcode_problem_details_522a5d0967f25e18.json  leetcode_problem_details_53018c50373f1389.json  leetcode_problem_details_77189a114fc8637c.json  leetcode_problem_details_8166834b7d327021.json  leetcode_problem_details_84aa6190ed1850ba.json  leetcode_problem_details_a77b727b651f1bac.json  leetcode_problem_details_a792a3ecce6885e7.json  leetcode_problem_details_b92c2588248638b5.json  leetcode_problem_details_c82aacf1d88a0f4e.json  leetcode_problem_details_d05ebb3d9d4ecfee.json  leetcode_problem_details_dd08184ee8030dc5.json  leetcode_problem_details_e7e79197fd3b88f3.json  (+11 more)
Backend/app/: main.py
JobScraper/: .env.example  ARCHITECTURE.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  cache.py  config.py  example_leetcode.ca  leetcode_scraper.py  main.py  models.py  prompt_optimizer.py  pyproject.toml  scraper_engine.py  service.py  start.sh  tpm_limiter.py
JobScraper/.cache/: stats.json
JobScraper/JobScraper/: requirements.txt
JobScraper/agents/: company_analyst.py  interview_architect.py  question_strategist.py  technical_specialist.py
JobScraper/prompts/: interview_reconstruction.json  leetcode_extraction.json
(+225 files in other folders)
